<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hub_bg"
    android:padding="@dimen/spacing_lg"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/calc_display_inicial"
        android:textSize="@dimen/text_display_md"
        android:textColor="@color/calc_display_text"
        android:background="@color/calc_display_bg"
        android:padding="@dimen/calc_display_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVoltarCentral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:text="@string/btn_voltar_central"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtResultado" />

    <GridLayout
        android:id="@+id/gridButtons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rowCount="5"
        android:columnCount="4"
        android:alignmentMode="alignMargins"
        android:useDefaultMargins="true"
        app:layout_constraintTop_toBottomOf="@id/btnVoltarCentral"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/calc_btn_clear" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBackspace"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/calc_btn_backspace" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDividir"
            style="@style/Widget.Material3.Button"
            android:text="@string/calc_btn_dividir" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMultiplicar"
            style="@style/Widget.Material3.Button"
            android:text="@string/calc_btn_multiplicar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn7"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="7" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn8"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="8" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn9"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="9" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubtrair"
            style="@style/Widget.Material3.Button"
            android:text="@string/calc_btn_subtrair" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn4"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="4" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn5"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="5" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn6"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="6" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSomar"
            style="@style/Widget.Material3.Button"
            android:text="@string/calc_btn_somar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn1"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="1" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn2"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="2" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn3"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="3" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIgual"
            style="@style/Widget.Material3.Button"
            android:text="@string/calc_btn_igual" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn0"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="0" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPonto"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/calc_btn_ponto" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>