<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/quiz_bg"
    android:padding="@dimen/quiz_padding">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quiz_header_bg"
        android:gravity="center"
        android:padding="@dimen/quiz_header_padding_lg"
        android:text="@string/quiz_titulo"
        android:textColor="@color/quiz_text_header"
        android:textSize="@dimen/text_display_sm"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:gravity="center"
        android:text="@string/quiz_subtitulo"
        android:textColor="@color/quiz_text_body"
        android:textSize="@dimen/text_md" />

    <Button
        android:id="@+id/btnIniciarQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_xxl"
        android:backgroundTint="@color/quiz_btn_primary"
        android:text="@string/quiz_btn_iniciar"
        android:textColor="@color/quiz_btn_text" />

    <Button
        android:id="@+id/btnHistoricoQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quiz_btn_margin_top_sm"
        android:backgroundTint="@color/quiz_btn_tertiary"
        android:text="Ver histórico"
        android:textColor="@color/quiz_btn_text" />

    <Button
        android:id="@+id/btnVoltarCentralQuizMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/quiz_btn_margin_top_sm"
        android:backgroundTint="@color/quiz_btn_secondary"
        android:text="@string/btn_voltar_central"
        android:textColor="@color/quiz_btn_text" />

</LinearLayout>
